108) kernel: net: ipv4/icmp: redirect messages can use the ingress daddr as source.<br>
109) kernel: net: ipv4/6: compute net once in some cases.<br>
110) kernel: net: ipv4: fix a potential deadlock in mcast getsockopt() path.<br>
111) kernel: net: ipv6: add RT6_LOOKUP_F_IFACE flag if oif is set.<br>
112) kernel: net: ipv6: dont add RT6_LOOKUP_F_IFACE flag if saddr set.<br>
113) kernel: net: ipv6: add labels for site-local and 6bone testing addresses (RFC6724).<br>
114) kernel: net: ipv6: add anti-spoofing checks for 6to4 and 6rd.<br>
115) kernel: net: ipv6: only apply anti-spoofing checks to not-pointopoint tunnels.<br>
116) kernel: net: ipv6: nat: do not drop DNATed 6to4/6rd packets.<br>
117) kernel: net: ipv6: remove redundant oif checks in rt6_device_match.<br>
118) kernel: net: ipv6: drop frames with attached skb->sk in forwarding.<br>
119) kernel: net: ipv6: protect mtu calculation of wrap-around and infinite loop by rounding issues.<br>
120) kernel: net: ipv6: recreate ipv6 link-local addresses when increasing MTU over IPV6_MIN_MTU.<br>
121) kernel: net: ipv6: fix a potential use after free in sit.c.<br>
<br>
<br>
<b>3.7.x</b><br>
1) kernel: net: packet: infer protocol from ethernet header if unset.<br>
<br>
<br>
<b>TODO:</b><br>
1) full russian ui (work end ~99%).<br>
2) need add subchannel select for 5GHz module.<br>
3) need add ED_MODE to Advanced UI (0/1 - enable/disable Clear-Channel Assessment Monitor Support).<br>
4) need review, experiments with new roaming code in MT76x2 driver, need add multiif support in iappd daemon and implement to WebUI.<br>
5) in very far future: need add in firewall support xt_time matches for parental control.<br>
8) in very far future: need add perip shaper script and webui .<br>
7) in very far future: need add scripts and webui for support 3g usb dongles uses qmi protocol.<br>
9) in very far future: port support l2tp/pptp hardware NAT offload (really needed? in sdk very ugly code).<br>
<br>
<br>
<br>